2007-05-25  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetype_extensions.conf, src/filetypes.c, tagmanager/sh.c:
   Add *.ash and *.bash as filetype entensions for filetype SH.
   Add ash and wish to the shebang patterns.
 * geany.glade, src/callbacks.c, src/callbacks.h, src/geany.h,
   src/interface.c, src/main.c, src/ui_utils.c:
   Improve sensitivity of recent files sub menus.
 * src/filetypes.c: Add shebank-like detection for XML files.


2007-05-25  Nick Treleaven  <nick.treleaven@btinternet.com>

 * doc/geany.docbook:
   Comment out stopping make process.
   Remove note about editing build commands manually.
 * src/build.c, doc/geany.docbook:
   Add support for %e, %f in project run command.


2007-05-24  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.h:
   Add setptr() macro to free data and reassign to the same pointer.
 * src/build.c:
   Use get_build_executable() in prepare_run_script().


2007-05-24  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c: Fix loading of UTF-16/32 encoded files with a BOM.


2007-05-23  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/vte.c: Add popup menu item: Change current working directory.
 * geany.glade, src/dialogs.c, src/geany.h, src/interface.c,
   src/keyfile.c, src/main.c, src/prefs.c:
   Add default startup directory option (closes #1704988).
 * tagmanager/ruby.c, tagmanager/strlist.c, tagmanager/strlist.h:
   Backport changes from CTags SVN to fix parse problems in the Ruby
   parser.
 * data/filetype_extensions.conf, src/filetypes.c:
   Add filetype extension "*.ruby".
 * scintilla/ScintillaGTK.cxx:
   Fix wrong target list for PRIMARY clipboard.


2007-05-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/filetypes.c, src/symbols.c, tagmanager/parsers.h,
   tagmanager/makefile.win32, tagmanager/haskell.c,
   tagmanager/Makefile.am:
   Add Haskell tags support from CTags patch on sf.net written by Peter
   Strand (thanks).
 * src/symbols.c: