@@ -143,8 +143,9 @@ static GtkWidget *create_dialog(void)
 	gtk_box_pack_start(GTK_BOX(header_hbox), header_image, FALSE,FALSE,0);
 	header_label = gtk_label_new(NULL);
 	gtk_label_set_use_markup(GTK_LABEL(header_label), TRUE);
-	// print the subversion revision if it is available
-	g_snprintf(buffer, sizeof(buffer), HEADER, (utils_str_equal(REVISION, "-1")) ? "" : " (" REVISION ")");
+	// print the subversion revision generated by ./configure if it is available
+	g_snprintf(buffer, sizeof(buffer), HEADER,
+		(utils_str_equal(REVISION, "-1")) ? "" : "svn >= " REVISION);
 	gtk_label_set_markup(GTK_LABEL(header_label), buffer);
 	gtk_widget_show(header_label);
 	gtk_box_pack_start(GTK_BOX(header_hbox), header_label, FALSE,FALSE,0);
@@ -196,7 +197,7 @@ static GtkWidget *create_dialog(void)
 	gtk_label_set_justify(GTK_LABEL(builddate_label), GTK_JUSTIFY_CENTER);
 	gtk_label_set_selectable(GTK_LABEL(builddate_label), TRUE);
 	gtk_label_set_use_markup(GTK_LABEL(builddate_label), TRUE);
-	g_snprintf(buffer2, sizeof(buffer2), _("(built on %s)"), __DATE__);
+	g_snprintf(buffer2, sizeof(buffer2), _("(built on or after %s)"), __DATE__);
 	g_snprintf(buffer, sizeof(buffer), BUILDDATE, buffer2);
 	gtk_label_set_markup(GTK_LABEL(builddate_label), buffer);
 	gtk_misc_set_padding(GTK_MISC(builddate_label), 2, 2);
